# coralnet-exporter

./: .env.example  .gitignore  LICENSE  README.md  crawl_labelset.py  pyproject.toml  scrape.py  scrape_annotations.py  scrape_metadata.py
coralnet_exporter/: __init__.py  auth.py  calcification.py  classifier.py  cli.py  image_covers.py  legacy.py  slurm.py  source.py
